# audiowatermark

./: README.md
Audio-wavmark/: PROJECT_STRUCTURE.md  audio_watermark_example.py  config.py  install_dependencies.py  process_audio.bat  pyproject.toml  quick_test.py  requirements.txt  test_installation.py
Audio-wavmark/examples/: basic_usage.py
Audio-wavmark/src/wavmark/: __init__.py  advanced.py  config.py
Audio-wavmark/src/wavmark/models/: my_model.py
Audio-wavmark/src/wavmark/utils/: metric_util.py  wm_add_util.py  wm_decode_util.py
