[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wavmark"
version = "0.0.3"
authors = [
    { name = "Guangyu Chen (RUC)", email = "v-chenguangyu@outlook.com" },
]
description = "AI-Based Audio Watermarking Tool"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=1.9.0",
    "torchaudio>=0.9.0",
    "numpy>=1.19.0",
    "tqdm>=4.60.0",
    "huggingface_hub>=0.10.0",
    "librosa>=0.8.0",
    "resampy>=0.3.0",
    "soundfile>=0.10.0",
    "pydub>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "black>=21.0.0",
    "flake8>=3.8.0",
    "mypy>=0.800",
]

[project.urls]
"Homepage" = "https://github.com/wavmark/wavmark"
"Bug Tracker" = "https://github.com/wavmark/wavmark/issues"
